--- a/css/gallery.css
+++ b/css/gallery.css
@@ -225,4 +225,11 @@
   margin: 0 !important;
   padding: 0 !important;
 }
+.pictures-page html,
+.pictures-page body {
+  height: 100%;
+  margin: 0 !important;
+  padding: 0 !important;
+  background-color: lavender !important;
+}
 
