--- a/css/gallery.css
+++ b/css/gallery.css
@@ -232,4 +232,9 @@
   padding: 0 !important;
   background-color: lavender !important;
 }
+<main>
+  <section class="capturesque-section" id="pictures">
+    <!-- Your title and gallery here -->
+  </section>
+</main>
 
